--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,13 +32,14 @@ jobs:
           HEADLESS: "1"
         run: |
           . .venv/bin/activate
-          pytest
+          pytest tests/test_login_working.py
 
       - name: Summarize heals
         if: always()
         run: |
           . .venv/bin/activate
           python scripts/summarize_heals.py
+          pytest tests/test_login_broken_heals.py
 
       - name: Upload artifacts (heal logs & summary)
         if: always()
